<resources>
    <string name="app_name">UniCalc</string>
    <string name="calc_screen_name"></string>
    <string name="login_welcome">UniCalc</string>
    <string name="et_email">mail@mail.com</string>
    <string name="et_password">∙∙∙∙∙∙∙∙</string>
    <string name="bt_login">entrar</string>
    <string name="bt_salvar_main">salvar</string>
    <string name="title_activity_calc">CalcActivity</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="tv_media1">0</string>
    <string name="tv_media2">0</string>
    <string name="tv_mediaFinal">0</string>
    <string name="tv_label_media1">P1</string>
    <string name="tv_label_media2">P2</string>
    <string name="tv_label_media1_uninove">AV1</string>
    <string name="tv_label_media2_uninove">AV2</string>
    <string name="tv_label_mediaFinal">Média Final</string>
    <string name="tv_label_medias">RESULTADOS</string>
    <string name="tv_label_media_uninove">RESULTADOS</string>
    <string name="tv_label_p1">Provas e Trabalhos P1</string>
    <string name="tv_label_p2">Provas e Trabalhos P2</string>
    <string name="tv_label_av1_uninove">Provas e Trabalhos AV1</string>
    <string name="tv_label_av2_uninove">Provas e Trabalhos AV2</string>
    <string name="tv_label_exame">Exame</string>
    <string name="et_hint_input_nota">0</string>
    <string name="sp_universidades">Selecione a instituição</string>
    <string name="sp_categorias_de_ensino">Categoria</string>

</resources>
