<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:background="@color/colorPrimary">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_welcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:text="@string/login_welcome"
            android:textSize="25dp"
            android:layout_marginBottom="20dp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et_email"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:background="@drawable/et_email"
            android:hint="@string/et_email"
            android:lines="1"
            android:layout_below="@id/tv_welcome"
            android:layout_marginBottom="5dp"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:layout_centerHorizontal="true"
            android:background="@drawable/et_email"
            android:hint="@string/et_password"
            android:lines="1"
            android:layout_below="@id/et_email"
            android:layout_marginBottom="10dp"
            android:textAlignment="center" />

        <Button
            android:id="@+id/bt_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/bt_login"
            android:textColor="@color/bt_login"
            android:layout_below="@id/et_password"
            android:text="@string/bt_login"
            android:textAllCaps="false"
            android:layout_centerHorizontal="true"/>
    </RelativeLayout>


</android.support.constraint.ConstraintLayout>