<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/azul_unip"
    tools:context=".CalcActivity">

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/activity_calc_bg">

        <TextView
            android:id="@+id/tv_label_medias"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_label_medias"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:layout_marginTop="2dp"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:gravity="center"
            android:textSize="20sp"
            android:textStyle="bold"
            android:shadowColor="@color/azul_unip"
            android:shadowDx="1.5"
            android:shadowDy="1.3"
            android:shadowRadius="1.6"
            android:textColor="@color/amarelo_unip"
            android:background="@drawable/tv_label_medias"
            android:layout_centerHorizontal="true"/>

        <RelativeLayout
            android:id="@+id/relativeLayout_media1"
            android:layout_width="wrap_content"
            android:layout_below="@id/tv_label_medias"
            android:layout_marginTop="@dimen/defaultMargin"
            android:layout_marginLeft="@dimen/defaultMargin"
            android:layout_height="wrap_content">
            <TextView

                android:id="@+id/tv_media1"
                android:layout_width="@dimen/bimestralMediaFields"
                android:layout_height="@dimen/bimestralMediaFields"
                android:background="@drawable/tv_media1"
                android:gravity="center"
                android:textSize="@dimen/textSize_media_bimestral"
                android:text="@string/tv_media1"/>
            <TextView
                android:id="@+id/tv_label_media1"
                android:layout_width="@dimen/bimestralMediaFields"
                android:layout_height="@dimen/bimestralMediaFields"
                android:layout_marginLeft="5dp"
                android:gravity="center_vertical"
                android:layout_toRightOf="@id/tv_media1"
                android:text="@string/tv_label_media1"/>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/relativeLayout_media2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="@dimen/defaultMargin"
            android:layout_marginBottom="@dimen/defaultMargin"
            android:layout_below="@+id/relativeLayout_media1">
            <TextView
                android:id="@+id/tv_media2"
                android:layout_width="@dimen/bimestralMediaFields"
                android:layout_height="@dimen/bimestralMediaFields"
                android:background="@drawable/tv_media2"
                android:gravity="center"
                android:textSize="@dimen/textSize_media_bimestral"
                android:text="@string/tv_media2"/>

            <TextView
                android:id="@+id/tv_label_media2"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/bimestralMediaFields"
                android:layout_marginLeft="5dp"
                android:gravity="center_vertical"
                android:layout_toRightOf="@id/tv_media2"
                android:text="@string/tv_label_media2"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="@dimen/semestralMediaFields"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/defaultMargin"
            android:layout_marginRight="@dimen/defaultMargin"
            android:layout_marginBottom="@dimen/defaultMargin"
            android:layout_below="@id/tv_label_medias"
            android:layout_alignParentRight="true">
            <TextView
                android:id="@+id/tv_mediaFinal"
                android:layout_width="@dimen/semestralMediaFields"
                android:layout_height="@dimen/semestralMediaFields"
                android:background="@drawable/tv_media_final"
                android:gravity="center"
                android:layout_alignParentRight="true"
                android:textSize="@dimen/textSize_media_semestral"
                android:text="@string/tv_mediaFinal"/>

            <TextView
                android:id="@+id/tv_label_mediaFinal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/tv_mediaFinal"
                android:layout_marginTop="5dp"
                android:text="@string/tv_label_mediaFinal"/>
        </RelativeLayout>

    </RelativeLayout>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="@dimen/fab_margin"
            app:srcCompat="@android:drawable/ic_menu_edit" />
</android.support.design.widget.CoordinatorLayout>
