<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/azul_unip"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tv_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorWhite"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textSize="20dp"
        android:textStyle="bold"
        android:text="TESTE"/>

    <RelativeLayout
        android:id="@+id/rl_detalhes_curso"
        android:visibility="visible"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:gravity="center"
            android:id="@+id/til_universidades">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/InputLabel"
            android:textColor="@color/colorWhite"
            android:text="@string/sp_universidades"/>

            <Spinner
                android:id="@+id/sp_universidades"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginTop="5dp"
                android:layout_centerHorizontal="true"
                android:background="@drawable/tv_detalhes_curso"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_categorias_de_ensino"
            android:layout_width="match_parent"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:layout_below="@id/til_universidades"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/InputLabel"
                android:textColor="@color/colorWhite"
                android:text="@string/sp_categorias_de_ensino"/>

            <Spinner
                android:id="@+id/sp_categorias_de_ensino"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/tv_detalhes_curso"/>

        </android.support.design.widget.TextInputLayout>


        <Button
            android:id="@+id/bt_salvar_main"
            android:layout_below="@id/til_categorias_de_ensino"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_margin="@dimen/fab_margin"
            android:text="@string/bt_salvar_main"
            android:background="@drawable/bt_salvar_notas"
            android:textColor="@color/bt_salvar_notas"/>

    </RelativeLayout>

</android.support.constraint.ConstraintLayout>